second commit. videos images and icons

--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" type="text/css" href="./index.css" >
+    <link rel="stylesheet" type="text/css" href="./resources/css/index.css" >
     <meta charset="utf-8">
     <title>Excursion</title>
   </head>
   <body>
+    <!-- Top section -->
     <h1>Discover hidden places in the world around you</h1>
     <br>
     <a href="#">Discover Excursion (coming soon)</a><br>
-    <video src="videofile.ogg" autoplay poster="posterimage.jpg" controls alt="video of a waterfall">
-    <h2>Your Personal travel guide</h2>
+    <video src="./resources/images_and_videos/excursion.mp4" autoplay poster="posterimage.jpg" controls alt="video of a waterfall">
+      </video>
 
-    </video>
+    <!-- Bottom Section -->
+    <h2>Your Personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img src="./resources/images_and_videos/camp.jpeg" alt="an isolated campsite"><br>
+    <img src="./resources/images_and_videos/phone.png" alt="a mobile phone icon"><br>
+    <h2>Coming soon for iPhone and Android</h2>
+    <a href="#">Discover Excursion (coming soon)</a>
+    <p class="copyright">£copy;Excursion</p>
+
   </body>
 </html>
