third commit everything but autoplay and copyright

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1>Discover hidden places in the world around you</h1>
     <br>
     <a href="#">Discover Excursion (coming soon)</a><br>
-    <video src="./resources/images_and_videos/excursion.mp4" autoplay poster="posterimage.jpg" controls alt="video of a waterfall">
-      </video>
+    <video src="./resources/images_and_videos/excursion.mp4" autoplay poster="posterimage.jpg" alt="video of a waterfall" controls autoplay loop>
+      Video not supported</video>
 
     <!-- Bottom Section -->
     <h2>Your Personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <img src="./resources/images_and_videos/camp.jpeg" alt="an isolated campsite"><br>
+    <img src="./resources/images_and_videos/camp.jpg" alt="an isolated campsite"><br><br>
     <img src="./resources/images_and_videos/phone.png" alt="a mobile phone icon"><br>
     <h2>Coming soon for iPhone and Android</h2>
     <a href="#">Discover Excursion (coming soon)</a>
