fourth commit. could not solve autostart problem

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Discover hidden places in the world around you</h1>
     <br>
     <a href="#">Discover Excursion (coming soon)</a><br>
-    <video src="./resources/images_and_videos/excursion.mp4" autoplay poster="posterimage.jpg" alt="video of a waterfall" controls autoplay loop>
+    <video src="./resources/images_and_videos/excursion.mp4" autoplay poster="posterimage.jpg" alt="video of a waterfall" controls loop autostart>
       Video not supported</video>
 
     <!-- Bottom Section -->
@@ -20,7 +20,7 @@
     <img src="./resources/images_and_videos/phone.png" alt="a mobile phone icon"><br>
     <h2>Coming soon for iPhone and Android</h2>
     <a href="#">Discover Excursion (coming soon)</a>
-    <p class="copyright">£copy;Excursion</p>
+    <p class="copyright">&#169;Excursion</p>
 
   </body>
 </html>
